--- a/hogan.css
+++ b/hogan.css
@@ -61,3 +61,12 @@ a.button {
 a.button:hover {
     background-color: #009acd;
 }
+
+footer {
+    text-align: center;
+    background-color: #1a1a1a;
+    padding: 1rem;
+    color: #bbb;
+    font-size: 1rem;
+    margin-top: 3rem;
+}
