--- a/hogan.css
+++ b/hogan.css
@@ -62,7 +62,7 @@ a.button:hover {
     background-color: #009acd;
 }
 
-footer {
+.rights {
     text-align: center;
     background-color: #1a1a1a;
     padding: 1rem;
