--- a/hogan.css
+++ b/hogan.css
@@ -62,11 +62,20 @@ a.button:hover {
     background-color: #009acd;
 }
 
-.rights {
+.license-text {
+    font-size: 0.9rem;
+    color: #888;
+    margin-top: 5px;
+}
+
+footer {
     text-align: center;
     background-color: #1a1a1a;
     padding: 1rem;
     color: #bbb;
     font-size: 1rem;
     margin-top: 3rem;
+    position: relative;
+    bottom: 0;
+    width: 100%;
 }
